test/fail/FixityOutOfScopeInRecord.agda
module FixityOutOfScopeInRecord where

record R : Set where
  infixl 30 _+_

